src/test/ui/issues/issue-41726.nll.stderr
error[E0596]: cannot borrow data in a `&` reference as mutable
  --> $DIR/issue-41726.rs:15:9
   |
LL |         things[src.as_str()].sort(); //~ ERROR cannot borrow immutable
   |         ^^^^^^^^^^^^^^^^^^^^ cannot borrow as mutable

error: aborting due to previous error

For more information about this error, try `rustc --explain E0596`.
